# ocamlmig

./: .gitignore  CHANGES.md  README.md  dune-project  ocamlmig.opam  ocamlmig.opam.template
dev-tools.locks/ocaml-lsp-server/: dune-rpc.pkg  dyn.pkg  jsonrpc.pkg  lock.dune  lsp.pkg  merlin-lib.pkg  ocaml-lsp-server.pkg  ocaml.pkg  ocamlc-loc.pkg  stdune.pkg
dev-tools.locks/ocamlformat/: cmdliner.pkg  dune-build-info.pkg  fix.pkg  lock.dune  ocaml-version.pkg  ocamlformat-lib.pkg  ocamlformat.pkg  ocp-indent.pkg  uucp.pkg  uuseg.pkg
doc/: using.md  what.md
dune.lock/: cmdliner.2.0.0.pkg  core_unix.v0.17.1.pkg  dune-build-info.pkg  dune-configurator.pkg  lock.dune  ocaml-compiler.5.4.0.pkg  ocaml-version.pkg  ocaml.5.4.0.pkg  ocamlformat-lib.pkg  ocamlformat.pkg  ppx_partial.1.0.pkg  ppxlib.pkg  timezone.v0.17.0.pkg
examples/base_to_stdlib/: dune
examples/stdlib_to_base/: dune  stdlib_to_base.ml
examples/stdlib_to_base_check/: dune
examples/stdlib_to_stdlib/: dune  stdlib_to_stdlib.ml
hash-comment/: dune  hash_comment.ml  result
lib/: build.ml  build.mli  common.ml  conv.ml  conv.mli  dune  dune_files.ml  dune_files.mli  dune_graph.ml  dune_graph.mli  dyn_ocamlformat.ml  dyn_ocamlformat.mli  fmast.ml  fmast.mli  fmast_diff.ml  fmast_diff.mli  ocamlmig.ml  ocamlmig.mli  profile.ml  profile.mli  transform_check.ml  transform_check.mli  transform_common.ml  transform_common.mli  transform_migration.ml  transform_migration.mli  transform_migration_check.ml  transform_migration_check.mli  transform_migration_inverse.ml  transform_migration_inverse.mli  transform_migration_to_typed.ml  transform_migration_to_typed.mli  transform_replace.ml  transform_replace.mli  transform_replace_repetition.ml  transform_replace_repetition.mli  transform_scope.ml  transform_scope.mli  transform_strict_sequence.ml  transform_strict_sequence.mli  (+2 more)
test/: dune  run  test_ast_normalization.ml  test_migration.ml  test_migration_check.ml  test_migration_check.mli  test_migration_inverse.ml  test_migration_module.ml  test_mli.mli  test_preserve_format.ml  test_preserve_format_open.ml  test_preserve_format_unopen.ml  test_replace.ml  test_scope.ml  test_scope_open.ml  test_scope_unopen.ml  test_scope_unqualify.ml  test_strict_sequence.ml  z.ml
