(library
 (name ocamlmig)
 (flags (:standard -short-paths))
 (libraries
   base
   compiler-libs.common
   core.command
   core.filename_base
   core_unix.command_unix
   core_unix.filename_unix
   csexp
   ocaml-version
   sexplib
   unix
   ;; ocamlformat libs
   ocamlformat_lib
   ocamlformat_format
   ocamlformat_parser_extended
   bin_conf
 )
 (preprocess (pps ppx_sexp_conv ppx_compare ppx_sexp_value ppx_hash ppx_let ppx_partial ppx_pipebang)))
